{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 26,
  "lineage": "14685407-2cc0-184a-89ef-71e59989c82e",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "teams",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-a",
          "schema_version": 0,
          "attributes": {
            "id": "team-a",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "tenant": "team-a"
                },
                "name": "team-a",
                "resource_version": "4719",
                "uid": "7c2f7863-040e-499c-ac14-501c31e46b4b"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "team-a"
          }
        },
        {
          "index_key": "team-b",
          "schema_version": 0,
          "attributes": {
            "id": "team-b",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "tenant": "team-b"
                },
                "name": "team-b",
                "resource_version": "4718",
                "uid": "e8b8d361-dd66-45da-9f88-1cb818140a45"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "team-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "allow_same_ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-a",
          "schema_version": 0,
          "attributes": {
            "id": "team-a/allow-same-namespace",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-same-namespace",
                "namespace": "team-a",
                "resource_version": "4728",
                "uid": "2d161e2f-499b-40b9-b4e5-5e866a1ee281"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "tenant": "team-a"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace",
            "namespace": "team-a"
          },
          "dependencies": [
            "kubernetes_namespace.teams"
          ]
        },
        {
          "index_key": "team-b",
          "schema_version": 0,
          "attributes": {
            "id": "team-b/allow-same-namespace",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-same-namespace",
                "namespace": "team-b",
                "resource_version": "4729",
                "uid": "afcd1864-6501-43c5-a207-1eb1a361602e"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "tenant": "team-b"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-same-namespace",
            "namespace": "team-b"
          },
          "dependencies": [
            "kubernetes_namespace.teams"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "team-a",
          "schema_version": 0,
          "attributes": {
            "id": "team-a/deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "deny-all",
                "namespace": "team-a",
                "resource_version": "4786",
                "uid": "d485c515-4932-48f6-8b14-0f29f460ceef"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "deny-all",
            "namespace": "team-a"
          },
          "dependencies": [
            "kubernetes_namespace.teams"
          ]
        },
        {
          "index_key": "team-b",
          "schema_version": 0,
          "attributes": {
            "id": "team-b/deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "deny-all",
                "namespace": "team-b",
                "resource_version": "4727",
                "uid": "2b7f4ed0-935e-4f06-b415-db75901f76ab"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "deny-all",
            "namespace": "team-b"
          },
          "dependencies": [
            "kubernetes_namespace.teams"
          ]
        }
      ]
    }
  ]
}